--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <body>
     <h2>Lorem, ipsum.</h2>
 
-    <input type="file" name="" id="select-file" />
+    <input type="file" name="" id="select-file" accept="mp3" />
 
     <hr />
-
-    <img src="" class="cover" alt="" />
-
     <audio class="current-music" controls src=""></audio>
+
+    <img width="200" height="200" src="" class="cover" alt="Song Img" />
+    <hr />
+
+    <button class="pl-ps">></button>
 
     <script src="app.js"></script>
   </body>
